force-app/main/default/objects/Self_Assessment__c/Self_Assessment__c.object-meta.xml
<CustomObject>
    <description>An instance of a Self-Assessment Template for an individual participant</description>
    <label>Self-Assessment</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Self-Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Self-Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>