force-app/main/default/objects/Self_Assessment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Self-Assessments</relationshipLabel>
    <relationshipName>Self_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>