force-app/main/default/objects/Self_Assessment__c/fields/Contact_API_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_API_ID__c</fullName>
    <formula>CASESAFEID( Contact__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact API ID</label>
    <type>Text</type>
</CustomField>