force-app/main/default/objects/Self_Assessment__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Self_Assessment_Contact_Roles</valueSetName>
    </valueSet>
</CustomField>