force-app/main/default/objects/Self_Assessment__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <formula>DATEVALUE( Date_Time_Completed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>