force-app/main/default/objects/Self_Assessment__c/fields/Do_Not_Auto_Create_Answers__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Auto_Create_Answers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, self-assessment answers will not be automatically generated for the new self-assessment</description>
    <inlineHelpText>If checked, self-assessment answers will not be automatically generated for the new self-assessment</inlineHelpText>
    <label>Do Not Auto-Create Answers</label>
    <type>Checkbox</type>
</CustomField>