force-app/main/default/objects/Self_Assessment__c/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <description>The status of the email sent to the contact to complete the self-assessment. Set to &apos;Send Now&apos; to trigger the email.</description>
    <inlineHelpText>The status of the email sent to the contact to complete the self-assessment. Set to &apos;Send Now&apos; to trigger the email.</inlineHelpText>
    <label>Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Send Now</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>