force-app/main/default/objects/Self_Assessment__c/fields/My_Assessment__c.field-meta.xml
<CustomField>
    <fullName>My_Assessment__c</fullName>
    <formula>Owner:User.Id  =   $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Assessment</label>
    <type>Checkbox</type>
</CustomField>