force-app/main/default/objects/Self_Assessment__c/fields/Program_Engagement_API_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement_API_ID__c</fullName>
    <formula>CASESAFEID( Program_Engagement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Engagement API ID</label>
    <type>Text</type>
</CustomField>