force-app/main/default/objects/Self_Assessment__c/fields/Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_URL__c</fullName>
    <formula>$CustomMetadata.Self_Assessment_Setting__mdt.Default.Base_URL__c &amp; &quot;?said=&quot; &amp; CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public URL</label>
    <type>Text</type>
</CustomField>