force-app/main/default/objects/Self_Assessment__c/fields/Self_Assessment_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The self-assessment assignment that created this self-assessment</description>
    <inlineHelpText>The self-assessment assignment that created this self-assessment</inlineHelpText>
    <label>Self-Assessment Assignment</label>
    <referenceTo>Self_Assessment_Assignment__c</referenceTo>
    <relationshipLabel>Self-Assessments</relationshipLabel>
    <relationshipName>Self_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>