force-app/main/default/objects/Self_Assessment__c/fields/Service_Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Schedule_Name__c</fullName>
    <formula>Service_Session__r.pmdm__ServiceSchedule__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Schedule Name</label>
    <type>Text</type>
</CustomField>