force-app/main/default/objects/Self_Assessment__c/fields/Service_Session__c.field-meta.xml
<CustomField>
    <fullName>Service_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Session</label>
    <referenceTo>pmdm__ServiceSession__c</referenceTo>
    <relationshipLabel>Self-Assessments</relationshipLabel>
    <relationshipName>Self_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>