force-app/main/default/objects/Self_Assessment__c/listViews/Investment_Readiness.listView-meta.xml
<ListView>
    <fullName>Investment_Readiness</fullName>
    <columns>NAME</columns>
    <columns>Self_Assessment_Template__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Program_Engagement__c</columns>
    <columns>Service_Schedule_Name__c</columns>
    <columns>Service_Session__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Self_Assessment_Template__c</field>
        <operation>equals</operation>
        <value>Investment Readiness</value>
    </filters>
    <label>Investment Readiness</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>