force-app/main/default/objects/Self_Assessment__c/listViews/My_Assessments.listView-meta.xml
<ListView>
    <fullName>My_Assessments</fullName>
    <columns>Service_Schedule_Name__c</columns>
    <columns>Self_Assessment_Template__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Assessment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Assessments</label>
</ListView>